# UID-project-phase-2

./: README.md  booking.html  booking.js  index.html  style.css  v2ac.html  v2bed.html  v2bookshelf.html  v2dishwasher.html  v2electricchimeny.html  v2electricchimney.html  v2grinder.html  v2heater.html  v2kitchen.html  v2men.html  v2oven.html  v2purifier.html  v2refrigerator.html  v2sofa.html  v2tablechair.html  v2wardrobe.html  v2washingmachine.html  v2women.html
auth/: global.css  login.html  register.html
backend/: .env  .env.example  .gitignore  README.md  dataset.csv  pyproject.toml  requirements.txt  uc_dataset.csv
backend/api/: admin.py  apps.py  models.py  schema.py  settings.py  urls.py
backend/api/management/commands/: fetch_service_images.py  fetch_service_images_selenium.py  import_services.py  map_images_to_csv.py
backend/api/migrations/: 0001_initial.py  0002_remove_order_subservice_orderitem.py  0003_category_remove_orderitem_subservice_and_more.py
frontend/: oldpage.html  style.css
frontend/serveaze/: jsconfig.json  package-lock.json  package.json
frontend/serveaze/app/: ApolloWrapper.js  _app.js  layout.js  page.js
frontend/serveaze/app/components/: Logo.js
frontend/serveaze/app/login/: page.js
frontend/serveaze/app/register/: page.js
frontend/serveaze/lib/: apolloClient.js
